# terok-clearance

./: AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  REUSE.toml  SECURITY.md  mkdocs.yml  properdocs.yml  pyproject.toml  sonar-project.properties  tach.toml
.github/: copilot-instructions.md  requirements-ci.txt
.github/workflows/: analysis.yml  ci.yml  docs.yml  inventory.yml  release.yml  sonar.yml  sonar_pr.yml
contrib/systemd/: terok-dbus.service
docs/: developer.md  gen_quality_report.py  index.md
src/terok_clearance/: __init__.py  _clearance.py  _cli.py  _client.py  _constants.py  _event_ingester.py  _hub.py  _install.py  _notifier.py  _protocol.py  _registry.py  _service.py  _subscriber.py  _unix_socket.py  _wire.py  commands.py
src/terok_clearance/cli/: main.py  registry.py  terminal_clearance.py
src/terok_clearance/cli/verbs/: clearance.py  notify.py  serve.py  serve_verdict.py
src/terok_clearance/client/: client.py  identity_resolver.py  subscriber.py
src/terok_clearance/domain/: container_info.py  events.py  identity.py  inspector.py
src/terok_clearance/hub/: ingester.py  server.py
src/terok_clearance/notifications/: callback.py  desktop.py  factory.py  protocol.py
src/terok_clearance/notifier/: __init__.py  app.py
src/terok_clearance/resources/apparmor/: terok-clearance-hub  terok-clearance-notifier
src/terok_clearance/resources/selinux/: terok_clearance_hub.te  terok_clearance_notifier.te
src/terok_clearance/resources/systemd/: terok-clearance-notifier.service  terok-clearance-verdict.service  terok-dbus.service
src/terok_clearance/runtime/: installer.py  service.py
src/terok_clearance/tools/: hardening.py
src/terok_clearance/verdict/: client.py  interface.py  server.py  shield_exec.py  socket.py
src/terok_clearance/wire/: errors.py  interface.py  sanitize.py  socket.py
src/terok_dbus/: __init__.py  _callback.py  _clearance.py  _cli.py  _client.py  _event_ingester.py  _hub.py  _install.py  _notifier.py  _null.py  _podman.py  _protocol.py  _registry.py  _serve.py  _service.py  _subscriber.py  _wire.py
src/terok_dbus/resources/systemd/: terok-dbus.service
tests/: conftest.py  test_callback.py  test_clearance.py  test_cli.py  test_client.py  test_commands.py  test_constants.py  test_event_ingester.py  test_factory_silence.py  test_hub.py  test_identity_resolver.py  test_init.py  test_inspector.py  test_install.py  test_lazy_imports.py  test_multi_socket_subscriber.py  test_notifier.py  test_notifier_app.py  test_notifier_install.py  test_null.py  test_podman.py  test_protocol.py  test_registry.py  test_sanitize.py  test_serve.py  test_shield_exec.py  test_subscriber.py  test_verdict_interface.py  test_version.py  test_wire.py  test_wire_socket_context.py
tests/containers/: Containerfile.alpine  Containerfile.debian12  Containerfile.debian13  Containerfile.fedora43  Containerfile.fedora44  Containerfile.mageia  Containerfile.podman  Containerfile.ubuntu2404  Containerfile.ubuntu2604  Containerfile.void  matrix.yml  run-matrix.sh
tests/integration/: __init__.py  conftest.py  test_action_dispatch.py  test_cli_integration.py  test_headless_fallback.py  test_notify_lifecycle.py  test_subscriber_integration.py
