[build-system]
requires = ["poetry-core>=1.9.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "terok-clearance"
version = "0.6.10"
description = "Shield clearance and desktop notifications for terok"
readme = "README.md"
license = "Apache-2.0"
authors = ["Jiri Vyskocil <jiri@vyskocil.com>"]
keywords = ["dbus", "notifications", "desktop", "freedesktop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Desktop Environment",
    "Typing :: Typed",
]

packages = [
  { include = "terok_clearance", from = "src" },
]
maintainers = ["Jiri Vyskocil <jiri@vyskocil.com>"]
homepage = "https://terok.ai/"
repository = "https://github.com/terok-ai/terok-clearance"
documentation = "https://terok-ai.github.io/terok-clearance/"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
dbus-fast = ">=2.0,<5.0"
asyncvarlink = "^0.3.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.10"
pre-commit = ">=4.0"
bandit = ">=1.7"
docstr-coverage = "^2.3.2"
complexipy = ">=5.0"
vulture = ">=2.12"
reuse = "^6.2.0"
tach = "^0.34.1"
mypy = ">=1.13,<2.0"

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.3"
pytest-cov = ">=4.0"
pytest-asyncio = ">=0.21.0"
python-dbusmock = ">=0.32"

[tool.poetry.group.docs.dependencies]
properdocs = ">=1.6.7"
mkdocs-material = ">=9.0"
mkdocstrings = {extras = ["python"], version = ">=0.24"}
mkdocs-literate-nav = ">=0.6"
mkdocs-section-index = ">=0.3"
mkdocs-terok = "^0.5"

[tool.poetry.scripts]
terok-clearance-hub = "terok_clearance.cli.main:main"
terok-clearance-notifier = "terok_clearance.notifier.app:main"

[tool.poetry.urls]
Issues = "https://github.com/terok-ai/terok-clearance/issues"
Changelog = "https://github.com/terok-ai/terok-clearance/releases"
Security = "https://github.com/terok-ai/terok-clearance/security/policy"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
  "integration: requires a running D-Bus session bus",
  "needs_dbus: requires a D-Bus session bus on DBUS_SESSION_BUS_ADDRESS",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except
  "SIM102", # nested if statements
  "SIM105", # contextlib.suppress vs try/except/pass
  "SIM108", # use ternary operator
  "SIM117", # nested with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["terok_clearance"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# Static type checking — see `make typecheck`.
[tool.mypy]
python_version = "3.12"
files = ["src/terok_clearance"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
pretty = false
show_error_codes = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)$"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
folders = [{path = "src"}]
