[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "terok-clearance"
description = "Shield clearance and desktop notifications for terok"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
maintainers = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
keywords = ["dbus", "notifications", "desktop", "freedesktop"]
requires-python = ">=3.12,<4.0"
dynamic = ["version", "classifiers"]
# ── Dependency pinning policy (see AGENTS.md) ───────────────────────
# Third-party runtime deps at major 0 (0.y.z) are pinned to an exact
# patch: pre-1.0 packages guarantee nothing across minors OR patches.
# Major >= 1 deps use ranges (semver).  Sibling terok-* deps are exempt
# — we guarantee patch-level API stability, so they keep ranges (or a
# release-wheel URL pin).  Dev/test/docs groups are exempt.  This is the
# ONLY comment permitted in this file — never add dev-cycle notes here,
# and never mention temporary git-branch pins or the multi-repo PR chain
# (a merge script rewrites deps and would leak such comments into a
# production release).
dependencies = [
    "dbus-fast>=4.3.0,<5.0",
    "asyncvarlink==0.3.2",
    "pyyaml>=6.0",
    "terok-util>=0.2.0,<0.3.0",
]

[project.urls]
Homepage = "https://terok-ai.github.io/terok-clearance/"
Repository = "https://github.com/terok-ai/terok-clearance"
Documentation = "https://terok-ai.github.io/terok-clearance/"
Issues = "https://github.com/terok-ai/terok-clearance/issues"
Changelog = "https://github.com/terok-ai/terok-clearance/blob/master/CHANGELOG.md"
Security = "https://github.com/terok-ai/terok-clearance/security/policy"

[project.scripts]
terok-clearance-hub = "terok_clearance.cli.main:main"

[tool.poetry]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Desktop Environment",
    "Typing :: Typed",
]

packages = [
  { include = "terok_clearance", from = "src" },
]
version = "0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.20"
pre-commit = ">=4.0"
bandit = ">=1.7"
docstr-coverage = "^2.3.2"
complexipy = ">=6.0.0"
vulture = ">=2.12"
reuse = "^6.2.0"
tach = "^0.35.0"
mypy = ">=2.1.0,<3.0"

[tool.poetry.group.test.dependencies]
pytest = ">=9.1.1"
pytest-cov = ">=4.0"
pytest-asyncio = ">=1.4.0"
python-dbusmock = ">=0.32"

[tool.poetry.group.docs.dependencies]
properdocs = ">=1.6.7"
mkdocs-material = ">=9.7.6"
mkdocstrings = {extras = ["python"], version = ">=0.26"}
mkdocs-literate-nav = ">=0.6"
mkdocs-section-index = ">=0.3"
mkdocs-terok = "^0.7"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
  "integration: requires a running D-Bus session bus",
  "needs_dbus: requires a D-Bus session bus on DBUS_SESSION_BUS_ADDRESS",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except
  "SIM102", # nested if statements
  "SIM105", # contextlib.suppress vs try/except/pass
  "SIM108", # use ternary operator
  "SIM117", # nested with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["terok_clearance"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# Static type checking — see `make typecheck`.
[tool.mypy]
python_version = "3.12"
files = ["src/terok_clearance"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
pretty = true
show_error_codes = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)(?:(?P<stage>a)(?P<revision>\\d+))?$"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
folders = [{path = "src"}]
